# SimpleDirectoryAnalyzer

./: .gitignore  CMakeLists.txt  README.md  lineCountData.hh  main.cc  main.hh  threadPool.cc  threadPool.hh  zadanie.cc  zadanie.hh
tests/: tests.cc
